--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_native_splash: ^2.4.1
   smooth_page_indicator: ^1.2.0
+  go_router: ^14.2.1
 
 dev_dependencies:
   flutter_test:
