--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -39,6 +38,8 @@ dependencies:
   flutter_native_splash: ^2.4.1
   smooth_page_indicator: ^1.2.0
   go_router: ^14.2.1
+  kakao_flutter_sdk: ^1.9.4
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/config/.env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
