--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   go_router: ^14.2.1
   kakao_flutter_sdk: ^1.9.4
   flutter_dotenv: ^5.1.0
+  dio: ^5.5.0+1
+  provider: ^6.1.2
+  pretty_dio_logger: ^1.3.1
+  get_it: ^7.7.0
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
