--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,15 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   get_it: ^7.7.0
   flutter_bloc: ^8.1.6
+  json_annotation: ^4.9.0
+  json_serializable: ^6.8.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
+  build_runner: ^2.4.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
