--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
+  webview_flutter: ^4.8.0
 
 
 dev_dependencies:
