--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   webview_flutter: ^4.8.0
   side_effect_bloc: ^1.0.0
   flutter_secure_storage: ^4.2.1
+  flutter_naver_map: ^1.2.3+1
 
 
 dev_dependencies:
