--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   side_effect_bloc: ^1.0.0
   flutter_secure_storage: ^4.2.1
   flutter_naver_map: ^1.2.3+1
+  intl: ^0.19.0
 
 
 dev_dependencies:
