--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_secure_storage: ^4.2.1
   flutter_naver_map: ^1.2.3+1
   intl: ^0.19.0
+  sign_in_with_apple: ^6.1.1
 
 
 dev_dependencies:
