--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   flutter_naver_map: ^1.2.3+1
   intl: ^0.19.0
   sign_in_with_apple: ^6.1.1
+  permission_handler: ^11.3.1
+  photo_manager: ^3.2.3
+  path_provider: ^2.1.4
 
 
 dev_dependencies:
