--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   permission_handler: ^11.3.1
   photo_manager: ^3.2.3
   path_provider: ^2.1.4
+  cached_network_image: ^3.4.0
 
 
 dev_dependencies:
