--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   photo_manager: ^3.2.3
   path_provider: ^2.1.4
   cached_network_image: ^3.4.0
+  flutter_card_swiper: ^7.0.1
 
 
 dev_dependencies:
