--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   photo_manager: ^3.2.3
   path_provider: ^2.1.4
   cached_network_image: ^3.4.0
+  image: ^4.2.0
 
 dev_dependencies:
   flutter_test:
