--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   path_provider: ^2.1.4
   cached_network_image: ^3.4.0
   image: ^4.2.0
+  bloc_concurrency: ^0.2.5
+  stream_transform: ^2.1.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
