Design : 앱 아이콘 및 이름 변경

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -15,7 +15,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>gyeonggi_express</string>
+	<string>경기선</string>
+	<key>CFBundleDisplayName</key>
+	<string>경기선</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
