--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     </queries>
 
     <application
-        android:label="gyeonggi_express"
+        android:label="경기행"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
